Email functionality has been added